start with storage refactor (#135)