@@ -4,25 +4,25 @@ import io.papermc.hangar.HangarComponent;
 import io.papermc.hangar.db.dao.internal.HealthDAO;
 import io.papermc.hangar.model.internal.admin.health.MissingFileCheck;
 import io.papermc.hangar.model.internal.admin.health.UnhealthyProject;
+import io.papermc.hangar.service.internal.file.FileService;
 import io.papermc.hangar.service.internal.uploads.ProjectFiles;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class HealthService extends HangarComponent {
 
     private final HealthDAO healthDAO;
     private final ProjectFiles projectFiles;
+    private final FileService fileService;
 
     @Autowired
-    public HealthService(HealthDAO healthDAO, ProjectFiles projectFiles) {
+    public HealthService(HealthDAO healthDAO, ProjectFiles projectFiles, FileService fileService) {
         this.healthDAO = healthDAO;
         this.projectFiles = projectFiles;
+        this.fileService = fileService;
     }
 
     public List<UnhealthyProject> getProjectsWithoutTopic() {
@@ -40,8 +40,8 @@ public class HealthService extends HangarComponent {
     public List<MissingFileCheck> getVersionsWithMissingFiles() {
         List<MissingFileCheck> missingFileChecks = healthDAO.getVersionsForMissingFiles();
         return missingFileChecks.stream().filter(mfc -> {
-            Path path = projectFiles.getVersionDir(mfc.getNamespace().getOwner(), mfc.getName(), mfc.getVersionString(), mfc.getPlatform());
-            return Files.notExists(path.resolve(mfc.getFileName()));
-        }).collect(Collectors.toList());
+            String path = projectFiles.getVersionDir(mfc.getNamespace().getOwner(), mfc.getName(), mfc.getVersionString(), mfc.getPlatform());
+            return !fileService.exists(path + "/" + mfc.getFileName());
+        }).toList();
     }
 }
